                                 Muldis::D
---------------------------------------------------------------------------

2009-03-xx  Darren Duncan <perl@DarrenDuncan.net>

    * Muldis::D version 0.x.x is released on CPAN as
    Muldis-D-0.x.x.tar.gz.

2009-03-20  Darren Duncan <perl@DarrenDuncan.net>

    * Muldis::D version 0.62.3 is released on CPAN as
    Muldis-D-0.62.3.tar.gz.

    * (Routines_Catalog.pod)  Fixed a few search+replace errors that
    release 0.62.2 introduced.

    * (Basics.pod, Types.pod, Routines.pod, Types_Catalog.pod,
    Routines_Catalog.pod, PTMD_Tiny.pod, HDMD_Perl[5|6]_Tiny.pod,
    Ordered.pod, Integer.pod, Blob.pod, Text.pod, Rational.pod,
    Temporal.pod)  General documentation reformat considering a frequently
    employed writing short-hand.  Often when text alternatives were
    displayed, and they had portions in common, the short-hand used fake
    Perl regex syntax; the main change was to update the short-hand to
    resemble Perl 6 syntax more and Perl 5 syntax less, mostly by
    substituting "[]" (non-capturing group) for "()".  This change was made
    partly so the new version is more readable considering "()" are used
    for other purposes in the same contexts while "[]" weren't.  It also
    brings greater consistency since Perl 6 rules are the standard format
    in other parts of the documentation for illustrating patterns.

2009-03-19  Darren Duncan <perl@DarrenDuncan.net>

    * Muldis::D version 0.62.2 is released on CPAN as
    Muldis-D-0.62.2.tar.gz.

    * (Routines.pod, Routines_Catalog.pod, Ordered.pod, Integer.pod,
    Blob.pod, Text.pod, Rational.pod, QTuple.pod, QRelation.pod, QSet.pod,
    QArray.pod, QBag.pod, Temporal.pod)  Second draft at reformatting all
    system-defined routine signatures to match the planned new PTMD_Tiny
    format for declaring routines.  Where parameter declarations used to be
    formatted "p1(T1)" or "&p1(T1)" or "&p1(T1)?", they are now formatted