@@ -28,11 +28,12 @@ of the Muldis D language.
 =item B<Muldis Rosetta for Perl 5> - L<Muldis::Rosetta>
 
 This is the first full implementation of Muldis D that is intended for
-production use, written in Perl 5 by Darren Duncan, and licensed under the
-GNU LGPL version 3 or later.  It is a sub-language implementation, in a
-manner of speaking, such that users would typically specify Hosted Data
-Muldis D code using native Perl 5 data structures and compile/execute them
-against a Perl 5 module embedded in their otherwise Perl 5 application.
+production use, written in Perl 5 by Muldis Data Systems, Inc., and
+licensed under the GNU LGPL version 3 or later.  It is a sub-language
+implementation, in a manner of speaking, such that users would typically
+specify Hosted Data Muldis D code using native Perl 5 data structures and
+compile/execute them against a Perl 5 module embedded in their otherwise
+Perl 5 application.
 
 =item B<Muldis Rosetta for Perl 6>
 
@@ -58,8 +59,8 @@ much like a Perl array or hash, or like some other third-party Set::
 modules available for Perl.  This is a standalone Perl 5 object class that
 represents a Muldis D quasi-relation value, and its methods implement all
 the Muldis D relational operators.  It is intended for production use, is
-written by Darren Duncan, and is licensed under the GNU LGPL version 3 or
-later.
+written by Muldis Data Systems, Inc., and is licensed under the GNU LGPL
+version 3 or later.
 
 =item B<Set::Relation for Perl 6>
 
