@@ -6,6 +6,9 @@
     * Muldis::D version 0.x.x is released on CPAN as
     Muldis-D-0.x.x.tar.gz.
 
+    * (D.pm, SeeAlso.pod)  Minor updates; changed notes about projects'
+    owners from Darren Duncan to Muldis Data Systems.
+
 2009-03-20  Darren Duncan <perl@DarrenDuncan.net>
 
     * Muldis::D version 0.62.3 is released on CPAN as
